# medidor-de-deformaciones

./: .gitignore  README.md  medef.py  pyproject.toml  requirements.txt
medidor/: __init__.py  app.py  cli.py  core.py  hardware.py  reports.py
tests/: test_core.py
